// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard renders the default structure correctly 1`] = `
<div
  className="wizard-container"
>
  <div
    className="sc-AxirZ bnnSKj card-wizard card"
    data-color="red"
  >
    <div
      className="wizard-navigation"
    >
      <div
        className="sc-AxjAm duBvmv nav card-header-pills nav-pills"
        onKeyDown={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Wizard renders with children 1`] = `
<div
  className="wizard-container"
>
  <div
    className="sc-AxirZ bnnSKj card-wizard card"
    data-color="red"
  >
    <div
      className="wizard-navigation"
    >
      <div
        className="sc-AxjAm duBvmv nav card-header-pills nav-pills"
        onKeyDown={[Function]}
      />
    </div>
    <div>
      My Child
    </div>
  </div>
</div>
`;
